2003-10-22  Ettore Perazzoli  <ettore@ximian.com>

	* e-sidebar.c (e_sidebar_add_button): Add a little border to the
	buttons so it looks nicer.

	* e-component-registry.c (query_components): Set an icon from the
	"evolution:button_icon" attribute.

2003-10-22  Ettore Perazzoli  <ettore@ximian.com>

	* e-shell.c (struct _EShellPrivate): New member
	"component_registry".
	(e_shell_construct): Don't call e_shell_unregister_all().
	(e_shell_unregister_all): Removed.
	(e_shell_init): Use g_new0(), removed a bunch of NULL/FALSE
	assignments.
	(e_shell_init): Initialize the component_registry.
	(e_shell_peek_uri_schema_registry): Rename from
	e_shell_get_uri_schema_registry.
	(e_shell_peek_component_registry): New.
	(setup_components): Remove.
	(e_shell_construct): Don't call.

	* main.c (no_windows_left_cb): Don't call e_shell_unregister_all().

	* e-shell.c (parse_default_uri): Removed.
	(parse_evolution_uri): Removed.
	(e_shell_parse_uri): Removed.

	* e-component-info.c: Remove.
	* e-component-info.h: Remove.

2003-10-22  Jeffrey Stedfast  <fejj@ximian.com>

	* e-storage-set-view.c (impl_tree_drag_data_received): Emit the
	right signal.
	(impl_tree_drag_data_get): Same.

2003-10-22  Ettore Perazzoli  <ettore@ximian.com>

	* importer/intelligent.c (create_gui): Make the scrolled window
	have a GTK_SHADOW_IN shadow.

2003-10-22  Ettore Perazzoli  <ettore@ximian.com>

	* e-shell-window.c (setup_widgets): Make the notebooks not have
	borders.
	(setup_widgets): Fix typo: e_get_language_list() returns a GSList,
	not a GList.

2003-10-22  Ettore Perazzoli  <ettore@ximian.com>

	* e-storage-browser.c (struct _EStorageBrowserPrivate): New member
	"storage_set_view_scrolled".
	(e_storage_browser_new): Put the storage_set_view in a scrolled
	window.  Set priv->storage_set_view_scrolled to this scrolled
	window.
	(e_storage_browser_peek_tree_widget_scrolled): New.

2003-10-22  Ettore Perazzoli  <ettore@ximian.com>

	* e-sidebar.c (PADDING): Increase to 6 pixels.