@@ -1,3 +1,8 @@
+2003-10-23  Chris Toshok  <toshok@ximian.com>
+
+	* e-component-registry.c (query_components): handle the case where
+	label == NULL, and set it to _("Unknown").
+
 2003-10-22  Ettore Perazzoli  <ettore@ximian.com>
 
 	* e-sidebar.c (e_sidebar_add_button): Add a little border to the
